# psychokinesis

./: .gitignore  README.md
doc/: 第三方软件和库.txt  计划.txt  软件概述.docx  运行平台.txt
doc/api/: login_config.json  wechatopr.json  windows_communication_communicate.json  windows_communication_config.json  windows_download__change_option_resp.json  windows_download_add_req.json  windows_download_add_resp.json  windows_download_change_option_req.json  windows_download_list_item_req.json  windows_download_list_item_resp.json  windows_download_list_req.json  windows_download_list_resp.json  windows_download_remove_req.json  windows_download_remove_resp.json
doc/tips/: Windows客户端插件化方案.txt  XMPP的BOSH设置.txt  aria2的编译与使用.txt  directui的使用.txt  gloox的使用.txt  windows端API使用注意事项.txt  微信方案.txt  服务器需要实现的特殊需求.txt  账号透明化解决方案.txt
lib/DuiLib/: CMakeLists.txt  StdAfx.h  UIActiveX.cpp  UICombo.h  UICommonControls.h  UIDelegate.cpp  UIRichEdit.cpp  UIlib.cpp  make.sh
lib/boost/property_tree/detail/: json_parser_write.hpp
lib/directui/UIlib/: CMakeLists.txt  StdAfx.h  UIActiveX.cpp  UIActiveX.h  UIAnim.cpp  UIEdit.h  UIList.cpp  UIMarkup.h  UITab.h  UIlib.cpp
src/Windows(DotNet)/: Packages.dgml  Psychokinesis.sln
src/Windows(DotNet)/Interface/: Device.cs  ICommunication.cs  IMessage.cs  IPlugin.cs  Interface.csproj  Message.cs
src/Windows(DotNet)/Interface/Properties/: AssemblyInfo.cs
src/Windows(DotNet)/Main/: App.config  App.xaml  App.xaml.cs  DeviceManagerWindow.xaml  DeviceManagerWindow.xaml.cs  Main.csproj  MainWindow.xaml  MainWindow.xaml.cs  PluginManager.cs  Settings.cs  SplashWindow.xaml  SplashWindow.xaml.cs  WelcomeWindow.xaml  WelcomeWindow.xaml.cs  packages.config
src/Windows(DotNet)/Main/Control/: Messenger.cs  PluginManager.cs
src/Windows(DotNet)/Main/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
src/Windows(DotNet)/Main/Util/: Crypto.cs  HttpClient.cs  SystemInfo.cs
src/Windows(DotNet)/Plugins/Chat/: Chat.csproj  ChatWindow.xaml  ChatWindow.xaml.cs
src/Windows(DotNet)/Plugins/Chat/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/phonegap/: packet.bat
src/phonegap/signing/: android.keystore
src/phonegap/www/: app.js  config.xml  index.html  index.js
src/phonegap/www/communication/: communication.js
src/phonegap/www/progress-bar/images/: Thumbs.db
src/phonegap/www/res/screen/android/: Thumbs.db
src/phonegap/www/res/screen/ios/: Thumbs.db
src/server/help_script/: change_root_ssh.sh
src/server/mod_add_myself/: Emakefile  build.sh
src/server/mod_add_myself/src/: mod_add_myself.erl
src/server/mod_admin_extra/: Emakefile  build.sh
src/server/mod_filter/: Emakefile  build.sh
src/server/mod_filter/src/: mod_filter.erl
src/server/mod_restful/: Makefile  README
src/server/mod_restful/src/: mod_restful.erl  mod_restful_register.erl
src/server/www/: default.html  download.html  index.html  join.html  join_form.html  register.html  success.html  suggest.html
src/server/www/app/: index.html  index.js  util.js
src/server/www/app/communication/: communication.js
src/server/www/app/locales/dev/: translation.json
src/server/www/app/locales/zh-CN/: translation.json
src/server/www/css/: index.css  index.min.css  metro-bootstrap.css  metro-bootstrap.min.css
src/server/www/js/: app.js  util.js  util.min.js
src/server/www/json/: download-websites-decode.json  download-websites.json
src/wechat/: app.js  config.js  db.js  package.json
src/wechat/static/: post.html
src/windows/: CMakeLists.txt  make.sh  toolchain-mingw32.cmake
src/windows(mingw)/: CMakeLists.txt
src/windows(mingw)/adapter/: adapter_communication.cpp  adapter_communication.h  adapter_download.h
src/windows(mingw)/default/: config.xml
src/windows(mingw)/packet/: packet.bat
src/windows(mingw)/process/: config_control.cpp  config_control.h  control.cpp  control.h  ui_control.cpp  ui_control.h
src/windows(mingw)/ui/: encoding_changer.cpp  encoding_changer.h  frame_window.h  psychokinesis.cpp
src/windows(mingw)/ui/res/: frame.xml
src/windows/adapter/: adapter_communication.cpp  adapter_communication.h  adapter_download.cpp  adapter_download.h
src/windows/api/: api.h  api_communication.cpp  api_communication.h  api_download.cpp  api_download.h
src/windows/default/: config.xml
src/windows/packet/: packet.bat  rar_sfx.conf  setup.bat
src/windows/process/: config_control.cpp  config_control.h  control.cpp  control.h  program_install.cpp  program_install.h  ui_control.cpp  ui_control.h
src/windows/ui/: api_message.cpp  api_message.h  frame_window.cpp  frame_window.h  psychokinesis.cpp  psychokinesis.rc  resource.h
src/windows/ui/res/: frame.xml
